Fixed the navbar to be sticky. Fixed the slideshow from making the page jump to the top on every slide. Fixed the grid for the pictures of available meat. Fixed the customer review thought bubbles.

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,6 +1,7 @@
 .card-wrapper {
     max-width: 1280px;
     display: grid;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
     gap: 2rem;
@@ -11,12 +12,19 @@
       margin-bottom: 20px;
   }
   .card-responsive-grid img {
-    width: 414px;
+    width: 350px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
   
   .card-responsive-grid:focus {
     outline: none;
+  }
+
+  .card-view-all-div {
+    margin-top: 20px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
   }
 
    @media screen and (min-width: 960px) {
