--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -7,6 +7,7 @@ html, body {
 
 .carousel-wrapper {
     position: relative;
+    overflow-y: scroll;
 }
 
 .carousel-container {
