--- a/src/app/customer-reviews/customer-reviews.component.css
+++ b/src/app/customer-reviews/customer-reviews.component.css
@@ -1,31 +1,42 @@
 .customer-reviews-wrapper {
     position: relative;
     height: 50%;
+    display: flex;
+    justify-content: center;
 }
 
 .box {
-    width: 300px;
-    margin: 20px auto;
-    background-color: rgb(163, 159, 159);
-    padding: 20px;
-    text-align: center;
-    font-weight: 900;
-    color: #fff;
-    font-family: arial;
-    position:relative;
+  position: relative;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  width: 300px;
+  background: #fff;
+  border-radius: 40px;
+  padding: 24px;
+  text-align: center;
+  color: #000; 
   }
 
-.sb:before {
+.box:before {
+    /* content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute; */
+    /* border-left: 10px solid rgb(163, 159, 159);
+    border-right: 10px solid transparent;
+    border-top: 10px solid rgb(163, 159, 159); */
+
     content: "";
     width: 0px;
     height: 0px;
     position: absolute;
-    border-left: 10px solid rgb(163, 159, 159);;
-    border-right: 10px solid transparent;
-    border-top: 10px solid rgb(163, 159, 159);;
-    border-bottom: 10px solid transparent;
-    left: 49px;
-    bottom: -19px;
+    border-left: 24px solid #fff;
+    border-right: 12px solid transparent;
+    border-top: 12px solid #fff;
+    border-bottom: 20px solid transparent;
+    left: 82px;
+    bottom: -24px;
   }
 
   .reviewer {
@@ -34,4 +45,7 @@
         font-weight: 900;
         color: #000000;
         font-family: arial;
+        margin-top: 30px;
+        margin-bottom: 20px;
+
   }
